proyecto_11/logs/firewall/iptables-strict.rules
# Generated by iptables-save v1.8.10 (nf_tables) on Thu May 21 10:01:15 2026
*filter
:INPUT ACCEPT [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -m conntrack --ctstate INVALID -m limit --limit 6/min -j LOG --log-prefix "P11_DROP_INVALID "
-A FORWARD -m conntrack --ctstate INVALID -j DROP
-A FORWARD -s 10.11.0.0/24 -d 10.12.0.10/32 -p tcp -m multiport --dports 23,135,139,445,3389,5900 -m limit --limit 18/min -j LOG --log-prefix "P11_DROP_RECON "
-A FORWARD -s 10.11.0.0/24 -d 10.12.0.10/32 -p tcp -m multiport --dports 23,135,139,445,3389,5900 -j DROP
-A FORWARD -s 10.11.0.0/24 -d 10.12.0.10/32 -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW -m recent --update --seconds 60 --hitcount 5 --name P11_SSH --mask 255.255.255.255 --rsource -m limit --limit 12/min -j LOG --log-prefix "P11_DROP_SSH_BRUTE "
-A FORWARD -s 10.11.0.0/24 -d 10.12.0.10/32 -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW -m recent --update --seconds 60 --hitcount 5 --name P11_SSH --mask 255.255.255.255 --rsource -j DROP
-A FORWARD -s 10.11.0.0/24 -d 10.12.0.10/32 -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW -m recent --set --name P11_SSH --mask 255.255.255.255 --rsource -j ACCEPT
-A FORWARD -s 10.11.0.0/24 -d 10.12.0.10/32 -p udp -m udp --dport 53 -m hashlimit --hashlimit-above 15/sec --hashlimit-burst 30 --hashlimit-mode srcip --hashlimit-name P11_DNS -m limit --limit 12/min -j LOG --log-prefix "P11_DROP_DNS_FLOOD "
-A FORWARD -s 10.11.0.0/24 -d 10.12.0.10/32 -p udp -m udp --dport 53 -m hashlimit --hashlimit-above 15/sec --hashlimit-burst 30 --hashlimit-mode srcip --hashlimit-name P11_DNS -j DROP
-A FORWARD -s 10.11.0.0/24 -d 10.12.0.10/32 -p icmp -m limit --limit 8/sec --limit-burst 12 -j ACCEPT
-A FORWARD -s 10.11.0.0/24 -d 10.12.0.10/32 -p icmp -m limit --limit 12/min -j LOG --log-prefix "P11_DROP_ICMP_FLOOD "
-A FORWARD -s 10.11.0.0/24 -d 10.12.0.10/32 -p icmp -j DROP
-A FORWARD -s 10.12.0.0/24 -d 10.11.0.0/24 -p tcp -m tcp --dport 4444 -m limit --limit 12/min -j LOG --log-prefix "P11_DROP_C2_BEACON "
-A FORWARD -s 10.12.0.0/24 -d 10.11.0.0/24 -p tcp -m tcp --dport 4444 -j DROP
-A FORWARD -s 10.11.0.0/24 -d 10.12.0.10/32 -p tcp -m multiport --dports 22,80 -j ACCEPT
-A FORWARD -s 10.11.0.0/24 -d 10.12.0.10/32 -p udp -m udp --dport 53 -j ACCEPT
-A FORWARD -s 10.12.0.0/24 -d 10.11.0.0/24 -p tcp -m tcp --dport 4444 -j ACCEPT
-A FORWARD -m limit --limit 20/min -j LOG --log-prefix "P11_DROP_DEFAULT "
-A FORWARD -j DROP
COMMIT
# Completed on Thu May 21 10:01:15 2026
# Generated by iptables-save v1.8.10 (nf_tables) on Thu May 21 10:01:15 2026
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:DOCKER_OUTPUT - [0:0]
:DOCKER_POSTROUTING - [0:0]
COMMIT
# Completed on Thu May 21 10:01:15 2026
